[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/coin/catonippo.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD/hudKey_yellow_empty.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD/hud_heartEmpty.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/hud_heartFull.png" type="Texture" id=4]
[ext_resource path="res://Assets/HUD/hudKey_green_empty.png" type="Texture" id=5]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=6]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.156863 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Key" type="TextureRect" parent="."]
margin_left = 152.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 128.0
texture = ExtResource( 2 )
expand = true

[node name="HeartsEmpty" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 191.0
margin_bottom = 77.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="HeartsFull" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 512.0
margin_bottom = 77.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="x2" type="Label" parent="."]
margin_left = 200.0
margin_top = 72.0
margin_right = 216.0
margin_bottom = 128.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "x"
align = 1
valign = 1

[node name="x" type="Label" parent="."]
margin_left = 72.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 120.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "x"
align = 1
valign = 1

[node name="Coins" type="Label" parent="."]
margin_left = 88.0
margin_top = 72.0
margin_right = 160.0
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "##"
valign = 1

[node name="Keys" type="Label" parent="."]
margin_left = 216.0
margin_top = 72.0
margin_right = 288.0
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "##"
valign = 1

[node name="Panel" type="Panel" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 424.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 6 )

[node name="ExitKey" type="TextureRect" parent="."]
margin_left = 320.0
margin_top = 72.0
margin_right = 376.0
margin_bottom = 128.0
rect_min_size = Vector2( 56, 56 )
texture = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 72.0
margin_right = 83.0
margin_bottom = 128.0
texture = ExtResource( 1 )
expand = true
